# sa

./: .codespell-ignore  .coverage  .pre-commit-config.yaml  .pylintrc  ACCESS_LINKS.md  API_IMPLEMENTATION.md  CHANGELOG.md  CODESPACES_GUIDE.md  GO.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LAUNCH_SA.html  LICENSE  Makefile  NEXT_STEPS.md  PULL_REQUEST_GUIDE.md  QUICKSTART.md  README.md  README_SIMPLE.md  RELEASE_NOTES_v2.0.0.md  RESUME_WORK.md  RUN.md  SECURITY.md  SESSION_SUMMARY.md  SETUP_LINKS.html  START_HERE.md  STATUS.md  SUGGESTIONS_IMPROVEMENTS.md  TEMPLATES_GUIDE.md  USAGE.md  VERIFICATION_REPORT.md  api_key_manager.py  coverage.xml  demo_app.py  examples.py  pyproject.toml  pytest.ini  quick.sh  requirements.txt  run.py  (+5 more)
.devcontainer/: TEST_CHECKLIST.md  devcontainer.json  post-create.sh  test_environment.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  project-setup.md
.github/workflows/: python-ci-debug.yml  python-ci.yml  test-minimal.yml
.streamlit/: config.toml
docs/: ALL_IMPROVEMENTS.md  API.md  TEMPLATES.md
src/sa/: __init__.py
tests/: test_ai_models.py  test_api.py  test_api_advanced.py  test_audio_generator.py  test_cache.py  test_config.py  test_database.py  test_generators_coverage.py  test_i18n.py  test_image_generator.py  test_image_generator_additional.py  test_placeholder.py  test_suggestions.py  test_suggestions_advanced.py  test_templates.py  test_ui.py  test_ui_coverage.py  test_video_generator.py
(+22 files in other folders)
