[tool.poetry]
name = "sa"
version = "0.1.0"
description = "Minimal scaffold for Python project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.0"
ruff = "^0.28"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"