[tool.poetry]
name = "sa"
version = "0.1.0"
description = "منصة تحويل النصوص إلى صور وفيديوهات مع إضافة الصوت"
authors = ["alsebaaest00 <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = "^0.34.0"
streamlit = "^1.31"
pillow = "^10.2"
openai = "^1.12"
elevenlabs = "^1.0"
moviepy = "^1.0"
pydub = "^0.25"
replicate = "^0.25"
python-dotenv = "^1.0"
requests = "^2.31"
numpy = "^1.26"
gtts = "^2.5"
httpx = "0.26.0"

[tool.poetry.dev-dependencies]
pytest = "^9.0"
pytest-cov = "^7.0"
black = "^25.12"
pre-commit = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
